tests/build/fail/named-nofields.rs
use ref_destruct::*;

#[ref_destruct(ref(MyStructRef))]
struct MyStruct{}

fn main() {}